--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build": "npx prisma generate && node esbuild.mjs",
     "dev": "NODE_ENV=development ts-node-dev --respawn -r tsconfig-paths/register src/devServer.ts",
-    "dev:gc-function": "functions-framework --target=pomodoroBack --port=4000"
+    "dev:gcf": "env-cmd functions-framework --target=pomodoroBack --port=4000"
   },
   "dependencies": {
     "@pothos/core": "^3.38.0",
@@ -17,12 +17,10 @@
     "@pothos/plugin-simple-objects": "^3.7.0",
     "@pothos/plugin-with-input": "^3.10.1",
     "@prisma/client": "^5.6.0",
-    "@types/cors": "^2.8.17",
     "connect-mongo": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
-    "esbuild-plugin-alias-path": "^2.0.2",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "grant": "^5.4.22",
@@ -30,24 +28,19 @@
     "graphql-scalars": "^1.22.4",
     "graphql-yoga": "^5.0.0",
     "json-bigint-patch": "^0.0.8",
-    "koa": "^2.14.2",
-    "koa-cors": "^0.0.16",
-    "koa-router": "^12.0.1",
-    "koa-session": "^6.4.0",
     "mongoose": "^8.0.1",
     "nodemailer": "^6.9.6"
   },
   "devDependencies": {
     "@google-cloud/functions-framework": "^3.3.0",
+    "@types/cors": "^2.8.17",
     "@types/ejs": "^3.1.4",
     "@types/express-session": "^1.17.10",
-    "@types/koa": "^2.13.12",
-    "@types/koa-cors": "^0.0.6",
-    "@types/koa-router": "^7.4.8",
-    "@types/koa-session": "^6.4.5",
     "@types/node": "^20.8.7",
     "@types/nodemailer": "^6.4.13",
+    "env-cmd": "^10.1.0",
     "esbuild": "^0.19.5",
+    "esbuild-plugin-alias-path": "^2.0.2",
     "prisma": "^5.4.2",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0",
