--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,17 @@
 # new
-NODE_ENV = 'development'
+NODE_ENV='development'
 
-MYSQL_URL = "mysql://dev:dev@localhost:3306/pomodoro"
+MYSQL_URL="mysql://dev:dev@localhost:3306/pomodoro"
 
 MONGODB_URL="mongodb://localhost:27017/pomodoro"
 
-GCP_PROJECT_ID = ""
-GCP_OAUTH_CLIENT_ID = ""
+GCP_PROJECT_ID=""
+GCP_OAUTH_CLIENT_ID=""
 GCP_OAUTH_CLIENT_SECRET=""
 
-FRONTEND_URL = "http://localhost:5173"
-FRONTEND_LOGIN_URL = "http://localhost:5173/login"
-FRONTEND_FAILED_LOGIN_URL = "http://localhost:5173/login/error"
+FRONTEND_URL="http://localhost:5173"
+FRONTEND_LOGIN_URL="http://localhost:5173/login"
+FRONTEND_FAILED_LOGIN_URL="http://localhost:5173/login/error"
 
 ##########
 # Docker #
@@ -25,4 +25,4 @@ DOCKER_MYSQL_PORT="3306"
 # MONGO
 DOCKER_MONGO_USER="dev"
 DOCKER_MONGO_PASS="dev"
-DOCKER_MONGO_PORT=27017
+DOCKER_MONGO_PORT="27017"
