--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -5,7 +5,13 @@ on:
     branches:
       - main
 
-# https://github.com/google-github-actions/setup-gcloud/blob/main/example-workflows/cloud-run/README.md
+env:
+  GCP_CLOUD_RUN_SERVICE_NAME: ${{ secrets.GCP_CLOUD_RUN_SERVICE_NAME }}
+  GCP_CLOUD_RUN_PORT: ${{ secrets.GCP_CLOUD_RUN_PORT }}
+  GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
+  GCP_REGION: ${{ secrets.GCP_REGION }}
+  GCP_CLOUD_RUN_IMAGE: gcr.io/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.GCP_CLOUD_RUN_SERVICE_NAME }}:${{ github.sha }}
+
 jobs:
   ci:
     runs-on: ubuntu-latest
@@ -31,21 +37,33 @@ jobs:
       id-token: "write"
 
     steps:
-      ###################
-      # Cloud Functions #
-      ###################
+      ############
+      # CloudRun #
+      ############
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Generate .env.yml file from Github Secrets
-        run: echo "${{ secrets.APP_ENV_YAML }}" > .env.yml
-      - id: 'auth'
+      - name: Generate .env file from Github Secrets
+        run: echo "${{ secrets.APP_ENV_FILE }}" > .env
+
+      - id: Auth
         uses: 'google-github-actions/auth@v2'
         with:
           credentials_json: '${{ secrets.GCP_CREDENTIALS_JSON }}'
-      - name: 'Set up Cloud SDK'
+      - name: Set up Cloud SDK
         uses: 'google-github-actions/setup-gcloud@v1'
         with:
           version: '>= 416.0.0'
-
-      - name: 'deploy'
-        run: gcloud functions deploy pomodoro-api --entry-point pomodoroBack --runtime nodejs18 --region=asia-northeast1 --env-vars-file=.env.yml --trigger-http
+      - name: Authorize Docker push
+              run: gcloud auth configure-docker
+      - name: Build and Push Container
+        run: |-
+          docker build -t ${{ env.GCP_CLOUD_RUN_IMAGE }}
+          docker push ${{ env.GCP_CLOUD_RUN_IMAGE }}
+      - name: 'Deploy to CloudRun'|-
+          gcloud run deploy ${{ env.GCP_CLOUD_RUN_SERVICE_NAME }} \
+            --image ${{ env.GCP_CLOUD_RUN_IMAGE }} \
+            --region ${{ env.GCP_REGION }} \
+            --port ${{ env.GCP_CLOUD_RUN_PORT }} \
+            --platform "managed" \
+            --allow-unauthenticated \
+            --quiet
