--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build": "npx prisma generate && node esbuild.mjs",
     "dev": "NODE_ENV=development ts-node-dev --respawn -r tsconfig-paths/register src/devServer.ts",
-    "dev:gcf": "env-cmd functions-framework --target=pomodoroBack --port=4000"
+    "start": "NODE_ENV=production node ./dist/index.cjs"
   },
   "dependencies": {
     "@pothos/core": "^3.38.0",
@@ -32,13 +32,11 @@
     "nodemailer": "^6.9.6"
   },
   "devDependencies": {
-    "@google-cloud/functions-framework": "^3.3.0",
     "@types/cors": "^2.8.17",
     "@types/ejs": "^3.1.4",
     "@types/express-session": "^1.17.10",
     "@types/node": "^20.8.7",
     "@types/nodemailer": "^6.4.13",
-    "env-cmd": "^10.1.0",
     "esbuild": "^0.19.5",
     "esbuild-plugin-alias-path": "^2.0.2",
     "prisma": "^5.4.2",
