--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -10,7 +10,6 @@ env:
   GCP_CLOUD_RUN_PORT: ${{ secrets.GCP_CLOUD_RUN_PORT }}
   GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
   GCP_REGION: ${{ secrets.GCP_REGION }}
-  GCP_ARTIFACT_REGISTRY_URL: asia-northeast1-docker.pkg.dev
   GCP_CLOUD_RUN_IMAGE: asia-northeast1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.GCP_CLOUD_RUN_SERVICE_NAME }}/${{ github.sha }}
 
 jobs:
@@ -64,7 +63,7 @@ jobs:
         with:
           version: '>= 416.0.0'
       - name: Authorize Docker push
-        run: gcloud auth configure-docker $GCP_ARTIFACT_REGISTRY_URL
+        run: gcloud auth configure-docker asia-northeast1-docker.pkg.dev
       - name: Build and Push Container
         run: |-
           docker build -t $GCP_CLOUD_RUN_IMAGE .
