--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -12,7 +12,6 @@ env:
   GCP_REGION: ${{ secrets.GCP_REGION }}
   GCP_ARTIFACT_REGISTRY_URL: asia-northeast1-docker.pkg.dev
   GCP_CLOUD_RUN_IMAGE: asia-northeast1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.GCP_CLOUD_RUN_SERVICE_NAME }}/${{ github.sha }}
-  ENV_FILE: ${{ secrets.ENV_FILE }}
 
 jobs:
   ci:
@@ -50,7 +49,10 @@ jobs:
           name: pomodoro-api
           path: dist
       - name: Create env file from Github secrets
-        run: echo "${{ secrets.ENV_FILE }}" > .env
+        shell: bash
+        env:
+          - ENV_FILE: ${{ secrets.ENV_FILE }}
+        run: 'echo "$ENV_FILE" > .env'
       - name: Cat .env
         run: cat .env
       - name: Cat index.cjs
