--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -51,7 +51,7 @@ jobs:
       - name: Create env file from Github secrets
         shell: bash
         env:
-          - ENV_FILE: ${{ secrets.ENV_FILE }}
+          ENV_FILE: ${{ secrets.ENV_FILE }}
         run: 'echo "$ENV_FILE" > .env'
       - name: Cat .env
         run: cat .env
