--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,4 +18,11 @@ services:
       MONGO_INITDB_ROOT_PASSWORD: ${DOCKER_MONGO_PASS}
     ports:
       - ${DOCKER_MONGO_PORT}:27017
+  firestore:
+    image: mtlynch/firestore-emulator
+    environment:
+      - FIRESTORE_PROJECT_ID=dummy-project-id
+      - PORT=8200
+    ports:
+      - 8200:8200
 
