--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
   "dependencies": {
     "@google-cloud/connect-firestore": "^3.0.0",
     "@google-cloud/firestore": "^7.1.0",
+    "@google-cloud/logging-winston": "^6.0.0",
     "@pothos/core": "^3.38.0",
+    "@pothos/plugin-errors": "^3.11.1",
     "@pothos/plugin-prisma": "^3.61.0",
     "@pothos/plugin-relay": "^3.44.0",
+    "@pothos/plugin-scope-auth": "^3.20.0",
     "@pothos/plugin-simple-objects": "^3.7.0",
     "@pothos/plugin-with-input": "^3.10.1",
     "@prisma/client": "^5.6.0",
@@ -29,7 +32,8 @@
     "graphql-scalars": "^1.22.4",
     "graphql-yoga": "^5.0.0",
     "json-bigint-patch": "^0.0.8",
-    "nodemailer": "^6.9.6"
+    "nodemailer": "^6.9.6",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
