--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "scripts": {
     "build": "npx prisma generate && node esbuild.mjs",
-    "generate":  "ts-node-dev --respawn -r tsconfig-paths/register src/schemaGenerator.ts",
+    "generate": "ts-node-dev --respawn -r tsconfig-paths/register src/schemaGenerator.ts",
     "dev": "NODE_ENV=development ts-node-dev --respawn -r tsconfig-paths/register src/index.ts",
     "preview": "NODE_ENV=development node dist/index.cjs",
     "start": "NODE_ENV=production node dist/index.cjs"
@@ -35,6 +35,7 @@
     "graphql-yoga": "^5.0.0",
     "json-bigint-patch": "^0.0.8",
     "nodemailer": "^6.9.6",
+    "otplib": "^12.0.1",
     "winston": "^3.11.0"
   },
   "devDependencies": {
