--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,19 +10,8 @@ services:
       - MYSQL_ROOT_PASSWORD=${DOCKER_MYSQL_PASS}
     ports:
     - ${DOCKER_MYSQL_PORT}:3306
-  mongo:
-    image: mongo
-    restart: always
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: ${DOCKER_MONGO_USER}
-      MONGO_INITDB_ROOT_PASSWORD: ${DOCKER_MONGO_PASS}
+  redis:
+    image: "redis:latest"
     ports:
-      - ${DOCKER_MONGO_PORT}:27017
-  firestore:
-    image: mtlynch/firestore-emulator
-    environment:
-      - FIRESTORE_PROJECT_ID=dummy-project-id
-      - PORT=8200
-    ports:
-      - 8200:8200
+      - "6379:6379"
 
